clusters/main/kubernetes/media/maintainerr/app/maintainerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: maintainerr
      app.kubernetes.io/name: maintainerr
      pod.name: main
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: maintainerr
        app.kubernetes.io/name: maintainerr
        pod.name: main
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      containers:
        - name: maintainerr
          # renovate: datasource=docker depName=ghcr.io/maintainerr/maintainerr
          image: ghcr.io/maintainerr/maintainerr:2.27.0@sha256:c332e4cd1bb9af5ad35ce3e5fd5c4de7b8d3c52c99ee2a2e50f52ac226510911
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 6246
          startupProbe:
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 10
            periodSeconds: 12
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 12
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              cpu: 75m
              memory: 200Mi
            limits:
              cpu: 1500m
              memory: 2400Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CHOWN
                - SETUID
                - SETGID
                - FOWNER
                - DAC_OVERRIDE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: data
              mountPath: /opt/data
            - name: devshm
              mountPath: /dev/shm
            - name: shared
              mountPath: /shared
            - name: tmp
              mountPath: /tmp
            - name: varlogs
              mountPath: /var/logs
            - name: varrun
              mountPath: /var/run
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: maintainerr-data
        - name: devshm
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: shared
          emptyDir: {}
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varlogs
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varrun
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
---
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  namespace: media
spec:
  selector:
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
    pod.name: main
  ports:
    - name: main
      port: 6246
      targetPort: 6246
