clusters/main/kubernetes/media/maintainerr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintainerr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: domain-0-le-prod
spec:
  ingressClassName: internal
  rules:
    - host: maintainerr.${DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintainerr
                port:
                  number: 6246
  tls:
    - hosts:
        - maintainerr.${DOMAIN_0}
      secretName: maintainerr-tls-0
